--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -25,7 +25,8 @@
 
 // 5. Components
 @import
-  'components/button';
+  'components/button',
+  'components/logo';
 
 // 6. Page-specific styles
 @import
